# geneclusterbench

./: .gitignore  README.md  pyproject.toml
data/: PROKKA_06122025.gff  random_numbers.txt
docs/: simulation_to_analysis_workflow.md
src/geneclusterbench/: __init__.py  analyse_gene_clustering.py  simulate_full_pangenome.py  submit_gene_clustering.py  submit_simulations.py
