[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneclusterbench"
version = "0.1.0"
description = "Utilities for simulating pangenomes and benchmarking gene clustering methods."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "argcomplete==3.6.2",
    "argh==0.31.3",
    "bcbio-gff==0.7.1",
    "biopython==1.85",
    "DendroPy==5.0.8",
    "gff-to-genbank==0.1.0",
    "gffutils==0.13",
    "numpy==2.0.2",
    "packaging==25.0",
    "pip==25.2",
    "pyfaidx==0.9.0.3",
    "setuptools==80.9.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "typing_extensions==4.15.0",
    "zipp==3.23.0",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
